[project]
name = "openai-api"
description = "Call LLM and VLM from ComfyUI using the OpenAI API standard. Compatible with custom inference servers like Ollama, vLLM or TGI thru their support of their OpenAI API implementation."
version = "2.0.0"
license = { file = "LICENSE" }
# Numpy and Pillow same as ComfyUI
dependencies = ["openai>=2.7.1<3.0.0", "numpy>=1.25.0", "Pillow"]

[project.urls]
Repository = "https://github.com/hekmon/comfyui-openai-api"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hekmon"
DisplayName = "OpenAI API"
Icon = "https://media.githubusercontent.com/media/hekmon/comfyui-openai-api/refs/tags/v2.0.0/res/logo.png"
